[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/bags/BagBrown_Animate.png" type="Texture" id=1]
[ext_resource path="res://Sprites/bags/BagBrown_Back.png" type="Texture" id=2]
[ext_resource path="res://Scripts/bag scripts/bag_detect_item.gd" type="Script" id=3]
[ext_resource path="res://Scripts/bag scripts/bag_sprite_controller.gd" type="Script" id=4]
[ext_resource path="res://Audio/pop_Catch_fix.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/bags/bagBrown/BagBrown_Miss.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Skin Scripts/skin_loader.gd" type="Script" id=7]
[ext_resource path="res://Scripts/bag scripts/bag_controller.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 150 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 700, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 100, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 100, 150 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "miss",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=14]
script/source = "extends AudioStreamPlayer2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 30.9546, 16.5327 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.997222, 0.218182 ), -2.6014, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 218.667, 430.372 )
script = ExtResource( 8 )

[node name="SkinLoader" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Back" type="AnimatedSprite" parent="SkinLoader"]
z_index = -100
frames = SubResource( 2 )
speed_scale = 0.0

[node name="Front" type="AnimatedSprite" parent="SkinLoader"]
z_index = 100
frames = SubResource( 13 )
animation = "idle"
frame = 5
speed_scale = 2.0
playing = true
script = ExtResource( 4 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.25
bus = "SFX"
script = SubResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -1.41583, 0.235962 )
z_index = 1002
polygon = PoolVector2Array( -30.7866, -45.2017, -32.5704, -47.1341, -33.4984, 50.6619, 35.2144, 50.6031, 35.2144, -47.0598, 33.3563, -45.053, 32.8051, 48.6448, -30.3381, 48.4674 )
one_way_collision_margin = 5.0

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 32.2112 )
z_index = 1001
shape = SubResource( 15 )

[node name="comboParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 30, 70 )
gravity = Vector2( 0, 20 )
scale_amount = 3.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 16 )
color = Color( 0.952941, 0.835294, 0.156863, 1 )

[node name="comboParticles2" type="CPUParticles2D" parent="."]
position = Vector2( 0, -41.8961 )
emitting = false
amount = 50
emission_shape = 2
emission_rect_extents = Vector2( 30, 1 )
gravity = Vector2( 0, -50 )
angle = 45.0
scale_amount = 5.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 16 )
color = Color( 0.952941, 0.835294, 0.156863, 1 )

[node name="catchParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -41.8961 )
emitting = false
amount = 20
lifetime = 0.1
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 30, 1 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 50 )
initial_velocity = 200.0
angle = 720.0
angle_random = 1.0
scale_amount = 5.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 16 )
color = Color( 0.745098, 0.745098, 0.745098, 0.694118 )
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
